[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Objetos/Arbol_diamante.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Scripts/ArbolDiamante.gd" type="Script" id=2]
[ext_resource path="res://Escenas/diamante_escene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Objetos/Arbol.png" type="Texture" id=4]
[ext_resource path="res://Escenas/HitBox.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 19.0
height = 10.0

[node name="arbolDiamante" type="RigidBody2D"]
mode = 1
script = ExtResource( 2 )

[node name="ArbolDiamante" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ArbolSinDiamante" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 0 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -17, -11, -7, -22, -1, -24, 9, -21, 17, -11, 19, 0, 17, 9, 13, 15, 7, 21, -7, 21, -11, 17, -16, 13, -19, -3 )

[node name="DiamanteCaido" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 24 )
frame = 3

[node name="HitBox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 1 )

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]

[editable path="HitBox"]
